--- a/templates/404.pug
+++ b/templates/404.pug
@@ -4,8 +4,8 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
-        title #{docTitle}
         link(rel="stylesheet", href="/css/main.css")
+        title 404
     body
         header.main-header
             nav.main-header_nav
@@ -16,3 +16,5 @@ html(lang="en")
                         a(href="/admin/add-product") Add Product
                     li.main-header__item
                         a(href="/admin/products") All Products
+        main
+            h1 Page Not Found!
